--- a/responsive.css
+++ b/responsive.css
@@ -1,3 +1,64 @@
+    /*--DARK MODE--*/
+    .theme-switch-wrapper {
+      display: flex;
+      justify-content: center;
+      align-items:center;
+      margin-left: 10px;
+      margin-right: 5px;
+    }
+    .theme-switch {
+      display: inline-block;
+      height: 36px;
+      position: relative;
+      width: 36px;
+    }
+    .theme-switch input {
+      display:none;
+    }
+    .slider {
+      background-color: #ccc;
+      bottom: 0;
+      cursor: pointer;
+      left: 0;
+      position: absolute;
+      right: 0;
+      top: 0;
+      transition: .4s;
+    }
+    .slider:before {
+      background-color: #fff;
+      bottom: 4px;
+      content: "";
+      height: 28px;
+      left: 4px;
+      position: absolute;
+      transition: .4s;
+      width: 28px;
+      box-shadow: 0px 1.5px #888888;
+    }
+    input:checked + .slider {
+      background-color: #66bb6a;
+      
+    }
+    input:checked + .slider:before {
+      transform: translateZ(-21px);
+      box-shadow: 0px -1.5px #888888;
+      height: 27px;
+      width: 27px;
+      left: 5px;
+      bottom: 4.2px;
+    }
+    .slider.round {
+      border-radius: 50%;
+    }
+    .slider.round:before {
+      border-radius: 50%;
+    }
+    /*------------------------------*/
+
+
+
+
 @media only screen and (max-width: 700px) {
     /* For mobiles: */
     
@@ -6,8 +67,6 @@
         height: 250px;
 
       }
-
-
 
     nav {
         position: fixed;
@@ -19,7 +78,7 @@
       }
 
     nav > .mobile{
-        padding-right: 10%;
+        padding-right: 1%;
         display: flex;
         position:static;
       }
@@ -56,16 +115,19 @@
         z-index: -10;
       }
 
-    .herb-detail {
-        font-family: "nocturne-serif-lights", serif;
-        font-weight: 400;
-        font-style: normal;
-        font-size: 16px;
-        text-align: center;
-        width: 80%;
-        text-align: justify;
+    nav > ul > li a:hover {
+        background-color: #ddd;
+        text-shadow: 0.5px 0.5px 0px #eda010, 3px 3px 0px rgba(0,0,0,0.1);
+        font-size: large;
+      
       }
 
+
+    /*-----------------DARK MODE switcher------------------*/
+
+
+
+    /*--------------------MAIN MENU------------------------------------------*/
 
     #product-picture {
         padding-bottom: 15%;
