--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 header {
   text-align: center;
   
-  background-image: url(https://shuobaocn.com/wp-content/uploads/2017/10/%E7%B4%A7%E5%9B%BA%E4%BB%B6%E6%8F%92%E5%9B%BE2.jpg);opacity: 0.75;
+  background-image: url(https://shuobaocn.com/wp-content/uploads/2017/10/%E7%B4%A7%E5%9B%BA%E4%BB%B6%E6%8F%92%E5%9B%BE2.jpg);
   background-size: cover;
   height: 400px;
   position: relative;
@@ -43,8 +43,9 @@ header {
   padding-top: 15%;
   justify-content: center;
   text-align: center;
+  font-weight: bold;
   font-size: 50px;
-  text-shadow: 2px 2px 7px #ecbf08;
+  text-shadow: 2px 2px 10px #ecbf08;
   animation-name: left-in;
   animation-duration: 4s;
   /*
@@ -55,7 +56,7 @@ header {
   from {
     margin-left: 100%;
     font-size: 10%;
-    text-shadow: 2px 2px 9px #E5D283;
+    text-shadow: 2px 2px 15px #E5D283;
   }
   /*
   0%   {background-color:rgba(255, 0, 0, 0.047); left:0px; top:0px;}
@@ -74,8 +75,9 @@ header {
   justify-content: center;
   text-align: center;
   font-size: x-large;
+  font-weight: bold;
   color: #213555;
-  text-shadow: 2px 1px  #E5D283;
+  text-shadow: 2px 1px 3px #f1f0e8;
   animation-name: right-in;
   animation-duration: 4s;
   /*
@@ -107,7 +109,7 @@ nav {
     display: flex;
     align-items: center;
     height: 10%;
-    background-color: #e5d183ec;
+    background-color: #e5d183;
     z-index: 1;
   }
 .main-logo {
@@ -196,22 +198,22 @@ nav > ul > li a:hover {
   position: absolute;
   background-color: #e5d183;
   width: 100%;
-  margin: -10px -650px;
+  margin: -10px -700px;
   height: 500%;
   padding: 70px;
   padding-top: 80px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: -10;  
+  z-index: 1;  
 }
 
 /* Links didalam dropdown */
 .mobile ul a {
-  color: black;
-  padding: 20px 5px;
+  color: #4F709C;
+  font-weight: bolder ;
+  padding: 20px 0px;
   text-decoration: none;
   display: block;
-  background-color: #e7d280;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  text-shadow: 0.5px 0.5px 0px #f3f0eb, 3px 3px 0px rgba(0,0,0,0.1); 
 }
 
 /* Ubah warna link dropdown on hover */
