--- a/style.css
+++ b/style.css
@@ -132,6 +132,18 @@ em {
     cursor: pointer;
     transition: 0.5s;
     transition-timing-function: ease-in-out;
+    animation: brand 3s 2;
+    animation-iteration-count:infinite;
+    animation-direction: alternate;
+  }
+
+  @keyframes brand {
+   
+    0%   {text-shadow:2px 2px 7px #159fe4; font-size: 14px; opacity: 0.01;}
+    50%   {text-shadow:2px 2px 7px #159fe4; font-size: 17px;}
+    75%  {text-shadow:2px 2px 7px #e4ad15; font-size: 17px;}
+    100%  {text-shadow:2px 2px 7px #eee8d6; font-size: 17px;}
+
   }
 
 em:hover {
@@ -144,8 +156,11 @@ nav .copyright {
   align-items: center;
   justify-content: center;
   position: absolute;
-  top: 4px;
-  right: -13px;
+  top: 2px;
+  right: -17px;
+  animation: brand 3s 2;
+  animation-iteration-count:infinite;
+  animation-direction: alternate;
   }
 
 nav .mobile {
@@ -341,9 +356,13 @@ article p{
   text-align: center;
 }
 
+#product-picture .proyek-item .mobile-bar {
+display: none;
+}
+
 #product-picture .grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 35px;
   row-gap: 60px;
   grid-auto-rows: 350px 350px 350px;
@@ -351,18 +370,45 @@ article p{
 
 .grid-container #pict-1 {
     grid-row: 1;
-    grid-column: 2 / 2 span;
-}
- 
-.grid-container #pict-3 {
-    grid-row: 2;
-    grid-column: 3 / 2 span;
+    grid-column: 1 /4  span;
 }
 
-.grid-container #pict-4{
-    grid-column: 1/2 span ;
-    grid-row: 2/1 span ;
+.grid-container #pict-4 {
+  grid-row: 1;
+  grid-column: 5 /7  span;
 }
+ 
+
+.grid-container #pict-2 {
+    grid-row: 2;
+    grid-column: 1 / 2 span;
+}
+
+.grid-container #pict-5 {
+  grid-row: 2;
+  grid-column: 5 span;
+}
+
+.grid-container #pict-7{
+  grid-column: 3/4 span ;
+  grid-row: 2 ;
+}
+
+
+.grid-container #pict-3{
+    grid-column: 1/4 span ;
+    grid-row: 3 ;
+}
+
+.grid-container #pict-6{
+  grid-column: 5/7 span ;
+  grid-row: 3 ;
+}
+
+
+
+
+
 
 .w3-display-container{
   display: none;
@@ -416,11 +462,11 @@ article p{
 
 .grid-container-2 #pict-1 {
     grid-row: 1;
-    grid-column: 2 / 2 span;
+    grid-column: 1 / 2 span;
 }
  
 .grid-container-2 #pict-3 {
-    grid-row: 2;
+    grid-row: 1/2 span;
     grid-column: 3 / 2 span;
 }
 
@@ -490,6 +536,8 @@ form {
   margin-bottom: 5%;
   border-radius: 10px;
   filter: grayscale(100%);
+  transition: 0.5s;
+  transition-timing-function: ease-in-out;
 }
 
 form:hover{
@@ -544,6 +592,8 @@ input[type="submit"]{
   margin: 8px 0;
   background-color: rgba(240, 11, 11, 0.475);
   cursor: pointer;
+  transition: 0.3s;
+  transition-timing-function: ease-in-out;
 }
 
 input[type="submit"]:hover{
@@ -563,6 +613,8 @@ input[type="button"]{
   margin: 8px 0;
   background-color: rgba(13, 186, 13, 0.29);
   cursor: pointer;
+  transition: 0.3s;
+  transition-timing-function: ease-in-out;
 }
 
 input[type="button"]:hover{
@@ -597,6 +649,7 @@ footer{
   animation-duration: 8s;
   animation-iteration-count:infinite;
   animation-timing-function:cubic-bezier(0.35, 0.62, 0.65, 0.3);
+  
 }
 
 @keyframes footer {
