--- a/style.css
+++ b/style.css
@@ -298,9 +298,9 @@ article p{
 
 #layanan .layanan-item1{
   background-color: #F5F7F8;
-  padding-top: 10px;
-  padding-bottom: 10px;
 }
+
+
 
 /*#layanan .layanan-item1 picture{
   filter: grayscale(100%);
@@ -356,6 +356,10 @@ article p{
   text-align: center;
 }
 
+#product-picture .proyek-item .menu-bar{
+  list-style-type: square;
+}
+
 #product-picture .proyek-item .mobile-bar {
 display: none;
 }
@@ -366,7 +370,24 @@ display: none;
   grid-gap: 35px;
   row-gap: 60px;
   grid-auto-rows: 350px 350px 350px;
+
 }
+
+#product-picture .grid-container div{
+  filter: blur(2px);
+  -webkit-filter: blur(2px);
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
+}
+  
+
+#product-picture .grid-container div:hover{
+  filter: blur(0px);
+  -webkit-filter: blur(0px);
+box-shadow: 0px 8px 16px 5px rgba(0,0,0,0.2);
+padding-top: 1%;
+}
+
 
 .grid-container #pict-1 {
     grid-row: 1;
@@ -405,11 +426,6 @@ display: none;
   grid-row: 3 ;
 }
 
-
-
-
-
-
 .w3-display-container{
   display: none;
 }
@@ -440,10 +456,28 @@ display: none;
   background-color: #F5F7F8;
 }
 
+#product-picture-2 .grid-container-2 div{
+  filter:opacity(50%);
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
+}
+  
+
+#product-picture-2 .grid-container-2 div:hover{
+filter:opacity(100%);
+box-shadow: 0px 8px 16px 5px rgba(0,0,0,0.2);
+padding-top: 1%;
+}
+
+
 #product-picture-2 ul {
   margin: 5%;
   font-family: 'Roboto Mono',monospace;
   text-align: center;
+}
+
+#product-picture-2 .proyek-item-2 .menu-bar-2{
+  list-style-type: circle;
 }
 
 #product-picture-2 h3 {
@@ -548,7 +582,17 @@ form:hover{
 form fieldset{
   padding: 20px 10px 10px 10px;
   background-color: #4f709c3a;
+  filter: blur(2px);
+  -webkit-filter: blur(2px);
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
+}
 
+form fieldset:hover{
+  filter: blur(0px);
+  -webkit-filter: blur(0px);
+  box-shadow: 0px 8px 16px 5px rgba(0,0,0,0.2);
+  margin-top: -3%;
 }
 
 form fieldset legend{
