--- a/responsive.css
+++ b/responsive.css
@@ -3,9 +3,16 @@
       display: flex;
       justify-content: center;
       align-items:center;
-      margin-left: 10px;
+      margin-left: 5px;
       margin-right: 5px;
     }
+
+    .theme-switch-wrapper p{
+      font-size:50%; 
+      rotate: 270deg;
+      margin-right: -10px;
+    }
+
     .theme-switch {
       display: inline-block;
       height: 36px;
@@ -73,7 +80,6 @@
         width: 100%;
         justify-content: space-between;
         height: 8%;
-        background-color: #e5d183ec;
         z-index: 12;
       }
 
@@ -102,10 +108,9 @@
 
     /* Konten Dropdown (Hidden secara Default) */
 
-    .mobile ul {
+    nav .mobile ul {
         display: none;
         position: absolute;
-        background-color: #e5d183ec;
         width: 100%;
         margin: -10px -440px;
         height: 500%;
@@ -115,23 +120,24 @@
         z-index: -10;
       }
 
-    nav > ul > li a:hover {
-        background-color: #ddd;
-        text-shadow: 0.5px 0.5px 0px #eda010, 3px 3px 0px rgba(0,0,0,0.1);
-        font-size: large;
-      
+      nav .mobile ul li:hover {
+        background-color: var(--section-color);
       }
+
 
 
     /*-----------------DARK MODE switcher------------------*/
 
 
 
+    /*------------------DARK MODE END----------------------*/
+
+
     /*--------------------MAIN MENU------------------------------------------*/
 
     #product-picture {
         padding-bottom: 15%;
-        background-color: #F5F7F8;
+
       }
 
     #product-picture .proyek-item .menu-bar {
@@ -141,6 +147,12 @@
     #product-picture .proyek-item .mobile-bar {
         display: block;
         list-style-type: circle;
+      }
+    
+    #product-picture .proyek-item .mobile-bar li:hover{
+        box-shadow: 0px 8px 50px 5px var(--secondary-color);
+        background-color: var(--form-color);
+        color: var(--heading-color);
       }
       
     #product-picture .grid-container{
@@ -155,7 +167,6 @@
     #product-picture-2 {
         margin-top: 0%;
         padding-bottom: 15%;
-        background-color: #F5F7F8;
       }
 
     #product-picture .w3-content{
@@ -187,7 +198,6 @@
     
     #proses-produksi{
         margin-top: 5%;
-        background-color: #F5F7F8;
         padding-top: 20px;
         padding-bottom: 5%;
       } 
@@ -205,7 +215,6 @@
 
     #kontak h2{
         margin-top: 5%;
-        background-color: #F5F7F8;
         padding-top: 10px;
         padding-bottom: 10%;
       }
@@ -230,7 +239,6 @@
       form fieldset:hover{
         filter: blur(0px);
         -webkit-filter: blur(0px);
-        box-shadow: 0px 8px 16px 5px rgba(0,0,0,0.2);
         margin-top: -5%;
       }
 
@@ -255,8 +263,6 @@
       footer{
         text-align: center;
         margin-top: 0%;
-        color: rgb(119, 151, 180);
-        text-shadow: 2px 2px 1px #131212;
         margin-bottom: 1.5%;
         animation: glow 1s ease-in-out infinite alternate;
       }
